# django-sql-test

./: .gitignore  LICENSE  README.md  pyproject.toml
django_sql_test/: __init__.py  app_settings.py  diff_utils.py  engine.py  utils.py
src/django_sql_test/: app_settings.py  engine.py  test_utils.py
tests/: test_utils.py
