[project]
name = "django-sql-test"
version = "0.2.0"
description = "A Django test mixin that captures and displays SQL query diffs between test runs, helping to track database-related changes in your tests."
authors = [
    {name = "Denis Zalivin", email = "zalivindenis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "django (>=4.0,<6.0)",
    "sql-metadata (>=2.15.0,<3.0.0)"
]

[project.urls]
homepage = "https://github.com/shaihulud/django-sql-test"
repository = "https://github.com/shaihulud/django-sql-test"
issues = "https://github.com/shaihulud/django-sql-test/issues"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''
force-exclude = '''
/(
    migrations
)/
'''

[tool.isort]
line_length = 120
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
use_parentheses = true
force_alphabetical_sort_within_sections = true
